[package]
name = "nukly"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
description = "Placeholder for things"
license = "MIT"
repository = "https://github.com/jaynus/nukly"

[dependencies]
nukly-sys = { version = "0.1.0", path = "nukly-sys" }

[workspace]
members = ["nukly-sys", "bindings-generator"]