[package]
name = "nukly"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
description = "Placeholder for things"
license = "MIT"
repository = "https://github.com/jaynus/nukly"

[features]
std = []
alloc-counters = []
default = ["alloc-counters", "std"]

[dependencies]
bitflags = "1.2"
thiserror = { version = "1.0" }
nukly-sys = { version = "0.1.0", path = "nukly-sys" }

[dev-dependencies]
image = "0.23"

[workspace]
members = ["winit-support", "nukly-sys", "bindings-generator", "examples/basic"]
